# XEMIUtil

./: .clang-format  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ae.yml  se.yml  vr.yml
CMake/: headerlist.cmake  sourcelist.cmake
CMake/ports/commonlibsse/: portfile.cmake  vcpkg.json
CMake/ports/commonlibvr/: fixcmake.patch  portfile.cmake  vcpkg.json
CMake/ports/mergemapper/: vcpkg.json
CMake/triplets/: x64-windows-mixed.cmake
include/: Config.h  Hooking.h  Hooks.h  PCH.h
src/: Hooks.cpp  Main.cpp
